# execkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURE_VISION.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  agent_shell_release_roadmap.html  dist-workspace.toml  glama.json  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-plz.yml  verify-publisher.yml  wheels.yml
crates/execkit/: CHANGELOG.md  Cargo.toml
crates/execkit-mcp/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/execkit-mcp/src/: audit.rs  cli.rs  lib.rs  main.rs  paths.rs  policy.rs  retention.rs
crates/execkit-mcp/src/watch/: dirtail.rs  meta.rs  mod.rs  render.rs  source.rs  state.rs  tail.rs  tui.rs  viewer.html  web.rs
crates/execkit-mcp/tests/: audit_dir.rs  audit_v2.rs  cli.rs  live_notify.rs  mcp_e2e.rs  policy_file.rs  web_viewer.rs
crates/execkit-py/: Cargo.toml  README.md  execkit.pyi  pyproject.toml
crates/execkit-py/src/: lib.rs
crates/execkit-py/tests/: test_local.py  test_ssh.py
crates/execkit/examples/: docker.rs  local.rs  ssh.rs
crates/execkit/src/: audit.rs  budget.rs  checkpoint.rs  error.rs  exec.rs  lib.rs  output.rs  policy.rs  redact.rs  session.rs
crates/execkit/src/transport/: docker.rs  local.rs  mod.rs  ssh.rs
crates/execkit/tests/: budget_smoke.rs  checkpoint_smoke.rs  docker_smoke.rs  framing_security.rs  local_session.rs  ssh_smoke.rs
crates/nexum/: Cargo.toml
crates/nexum-mcp/: Cargo.toml  README.md
crates/nexum-mcp/src/: main.rs
crates/nexum-mcp/tests/: mcp_e2e.rs
crates/nexum/examples/: local.rs  ssh.rs
crates/nexum/src/: audit.rs  error.rs  lib.rs  output.rs  policy.rs  session.rs
crates/nexum/src/transport/: local.rs  mod.rs  ssh.rs
crates/nexum/tests/: local_session.rs  ssh_smoke.rs
docs/: QUICKSTART.md
docs/adr/: 0001-remote-action-history.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  auditing-and-watch.md  checkpoints.md  cli-reference.md  faq.md  installation.md  introduction.md  output-budgets.md  python-sdk.md  rust-library.md  security-model.md  sessions.md  transports.md  wiring-into-an-agent.md
docs/superpowers/plans/: 2026-06-22-execkit-web-viewer-plan.md  2026-06-24-execkit-viewer-ux-plan.md
docs/superpowers/specs/: 2026-06-22-execkit-web-viewer-design.md  2026-06-24-execkit-viewer-ux-design.md
packaging/: README.md
packaging/npm/execkit/: README.md  package.json
packaging/npm/execkit-mcp/: README.md  package.json
packaging/pypi/execkit/: README.md  pyproject.toml
packaging/pypi/execkit-mcp/: README.md  pyproject.toml
packaging/pypi/execkit/src/execkit/: __init__.py
poc/: README.md  _policy.py  _session.py  _state.py  f1_reconnect_hostkey.py  f3_snapshot_replay.py  f4_fork_isolation.py  f5_capability_no_escalation.py  f6_path_traversal.py  r1_command_boundary.py  r2_stdout_stderr_split.py  r3_ansi_strip.py  r4_session_state.py  r5_interactive_repl.py  r6_docker_transport.py  run_all.py  run_flashy.py
poc/rust/: Cargo.toml
poc/rust/src/: main.rs
