[workspace]
resolver = "2"
members = ["crates/execkit", "crates/execkit-mcp"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/blinkingbit-oss/execkit"
homepage = "https://github.com/blinkingbit-oss/execkit"

[workspace.dependencies]
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
