[workspace]
resolver = "2"
members = ["crates/execkit", "crates/execkit-mcp", "crates/execkit-py"]
# execkit-py is an extension-module cdylib (no libpython link), so it must NOT be
# pulled into plain `cargo build/test/clippy`. The CI library jobs select
# `-p execkit -p execkit-mcp` explicitly; default-members keeps bare `cargo build`
# clean for local work. execkit-py is built/tested only via maturin.
default-members = ["crates/execkit", "crates/execkit-mcp"]

[workspace.package]
version = "0.6.0"
edition = "2021"
# Real floor: a transitive dep (darling 0.23, via schemars) requires 1.88.
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/blinkingbit-oss/execkit"
homepage = "https://github.com/blinkingbit-oss/execkit"

[workspace.dependencies]
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
