[package]
name = "execkit-mcp"
description = "MCP (stdio) server exposing execkit shell sessions to AI agents."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
execkit = { path = "../execkit", version = "0.4.1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1"
