[package]
name = "execkit-mcp"
description = "MCP (stdio) server exposing execkit shell sessions to AI agents."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
# pyproject.toml drives the maturin wheel build from the working tree; it is not
# part of the crates.io crate, so keep it out of the published tarball.
exclude = ["pyproject.toml"]

[dependencies]
execkit = { path = "../execkit", version = "0.7.1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1"
ratatui = "0.29"
crossterm = "0.28"
# Resolve ~ the way ssh/cargo do (HOME, then the passwd db) so default key
# paths are correct even when $HOME is unset.
home = "0.5"
