# SPDX-License-Identifier: Apache-2.0
[package]
name = "execkit-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false                       # PyPI-only (maturin); never crates.io
description = "Native Python bindings for execkit (built into the `execkit` wheel)."

[lib]
name = "execkit"                      # -> Python module `import execkit`
crate-type = ["cdylib"]

[dependencies]
# Renamed import: the lib is itself named `execkit` (the Python module), so the
# core crate is brought in as `execkit_core` to avoid a self-vs-dep name clash.
execkit-core = { package = "execkit", path = "../execkit" } # default features: local + ssh + docker
# pyo3 0.29 MSRV is 1.74, well under the workspace floor of 1.88. execkit-py is a
# wheel (not a consumer-compiled lib), so it is excluded from the 1.88 MSRV CI job.
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py38"] }
